spacing issues fix

--- a/portfolio/static/firstapp/css/bio.css
+++ b/portfolio/static/firstapp/css/bio.css
@@ -56,9 +56,8 @@ body{
     height: 200px;
 }
 
-.carousel-item> p{
-    margin-top: 0px;
-    margin-bottom: 0px;
+.carousel-caption p,h5{
+    margin: 0;
 }
 
 #blueish{
